CUDA C++ Optimal/results/compilation_logs/compile_size_42_reg_32_20253011_1053.txt
========== COMPILATION START ========== 
Parameters: PARAMETR_SIZE=42, MAXREGCOUNT=32 
Compile command: nvcc -O3 -arch=sm_70 -std=c++17 -o aco_cuda_optimized.exe aco_cuda_optimized.cu -Xcompiler "/O2 /fp:fast /openmp /MT" -use_fast_math -lcudart -maxrregcount=32 -Xptxas "-O3,-v" --resource-usage 
 
aco_cuda_optimized.cu(246): warning #68-D: integer conversion resulted in a change of sign
          if (hashTable[idx].key == -1) return -1.0;
                                    ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

aco_cuda_optimized.cu(257): warning #68-D: integer conversion resulted in a change of sign
          unsigned long long old = atomicCAS(&hashTable[idx].key, -1, key);
                                                                  ^

aco_cuda_optimized.cu(258): warning #68-D: integer conversion resulted in a change of sign
          if (old == -1 || old == key) {
                     ^

aco_cuda_optimized.cu(290): warning #68-D: integer conversion resulted in a change of sign
          hashTable[i].key = -1;
                             ^

aco_cuda_optimized.cu(1297): error: "shared_for_matrices" has already been declared in the current scope
      size_t shared_for_matrices = params_per_block_1 * 5 * 2 * sizeof(double);
             ^

aco_cuda_optimized.cu(1298): error: "shared_for_agents" has already been declared in the current scope
      size_t shared_for_agents = 42 * (sizeof(double) + sizeof(int)) + sizeof(double) + sizeof(curandState);
             ^

aco_cuda_optimized.cu(1299): error: "total_shared" has already been declared in the current scope
      size_t total_shared = shared_for_matrices + shared_for_agents;
             ^

3 errors detected in the compilation of "aco_cuda_optimized.cu".
aco_cuda_optimized.cu
========== COMPILATION END ========== 
Exit code: 2 
